2010-03-30  Andreia Gaita  <avidigal@novell.com>

	* m4/curl.m4: move CUSTOM_SUBDIR_OPTION to utilities.m4
	* m4/utilities.m4: define m4_ifblank/m4_ifnblank helpers

2010-03-30  Andreia Gaita  <avidigal@novell.com>

	* various.m4: move curl checks to curl.m4
	* curl.m4: add support for --with-curl=no|embedded|system options
	* ax_file_escapes.m4, m4/ax_print_to_file.m4: helper files for
	CUSTOM_SUBDIR_OPTION

2010-03-10  David Reveman  <davidr@novell.com>

	* gallium.m4: GALLIUM_CFLAGS and GALLIUM_LIBS are used in
	src/Makefile.am.

2010-03-08  Chris Toshok  <toshok@ximian.com>

	* pal.m4: hardcode more stuff about pal (this time for media
	capture).

2010-03-04  Andreia Gaita  <avidigal@novell.com>

	* build-configuration.m4: Add --with-manual-mono flag to disable
	autogenning/building/cleaning mono automatically from moon

2010-03-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mono.m4: mcs/mono/mono-basic must now reside next to moon (otherwise
	autogen.sh won't know how to configure mono).

2010-03-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* gallium.m4: Define GALLIUM_CFLAGS and GALLIUM_LIBS here.

2010-03-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* build-configuration.m4: Add AM conditionals for DEBUG and SANITY so that
	those variables can be passed to managed code too.

2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* various.m4: Add curl checks and --with-curl flag to
	activate building the curl bridge

2010-02-17  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: Fix firefox flags, for they are borked

2010-01-28  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: Add Firefox 3.6 support

2010-01-27  Chris Toshok  <toshok@ximian.com>

	* pal.m4: for now we hardcode glib+unix domain sockets for the
	messaging layer.

2010-01-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ffmpeg.m4: We need libavformat too now.

2009-12-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mono.m4: Remove PLUGIN_SL_2_0 definition, it's always true.
